# airbnb-clone

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json  turbo.json
apps/api/: Dockerfile  entrypoint.sh  package.json  pyproject.toml
apps/api/chat/: consumers.py  serializers.py
apps/api/chat/migrations/: 0001_initial.py
apps/api/config/: asgi.py  settings.py  urls.py
apps/api/property/: admin.py  authentication.py  models.py  urls.py
apps/api/property/migrations/: 0001_initial.py  0002_rename_no_of_guests_property_guests.py  0007_remove_property_favorited_property_favourited.py
apps/api/useraccount/: serializers.py
apps/web/: Dockerfile  README.md  eslint.config.mjs  next.config.mjs  package.json
apps/web/src/app/: layout.tsx
apps/web/src/lib/: runtime-config.ts
backend/: docker-compose.yml
backend/backend/: Dockerfile  entrypoint.sh  requirements.txt  settings.py
backend/backend/backend/: asgi.py  settings.py  urls.py
backend/backend/chat/: api.py  consumers.py  models.py  serializers.py  token_auth.py  urls.py
backend/backend/property/: admin.py  api.py  filters.py  forms.py  models.py  serializers.py  urls.py
backend/backend/property/migrations/: 0003_remove_property_image_propertyimage.py  0004_reservation.py  0005_property_favourited.py  0006_rename_favourited_property_favorited.py
backend/backend/useraccount/: api.py  models.py  serializers.py  urls.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
(+72 files in other folders)
